security_group.tf
resource "aws_security_group" "master" {
  name        = local.security_group_master
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.eks.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = local.security_group_master
    project = var.project
  }
}

resource "aws_security_group_rule" "ingress_workstation_https" {
  cidr_blocks       = var.accessing_computer_ips
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.master.id
  to_port           = 443
  type              = "ingress"
}
